Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14182

Gtid_Slave_Pos is not reported equal using show variables or show all slaves status

    XMLWordPrintable

Details

    • Unexpected results

    Description

      Definition of doc about show all slaves status

      Gtid_Slave_Pos GTID of the last event group replicated on a slave server, for each replication domain, as stored in the gtid_slave_pos system variable. Returned with SHOW ALL SLAVES STATUS only.

      MariaDB [(none)]> select version();
      +----------------------------------------+
      | version()                              |
      +----------------------------------------+
      | 10.2.9-MariaDB-10.2.9+maria~jessie-log |
      +----------------------------------------+
       
      MariaDB [(none)]> show global variables like 'gtid_sl%';
      +----------------+-----------------+
      | Variable_name  | Value           |
      +----------------+-----------------+
      | gtid_slave_pos | 0-3232261191-29 |
      +----------------+-----------------+
      

      pager grep -i gtid_slave_pos
      PAGER set to 'grep -i gtid_slave_pos'
      MariaDB [(none)]> show all slaves status\G
                     Gtid_Slave_Pos: 0-3232261190-30
      

      A list of binlog events in the slave that show some writes happen on it on top of replication events
      https://pastebin.com/Mvg7uCKv

      Not using multi domain
      Not using strict mode

      Attachments

        Activity

          People

            Elkin Andrei Elkin
            stephane@skysql.com VAROQUI Stephane
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - Not Specified
                Not Specified
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.